<resources>
    <string name="app_name" translatable="false">StoriesOne</string>

    <string name="coordinate_format">Position: %.5f, %.5f</string>
    <string name="created_at_format">Posted at: %s</string>

    <string name="back">Back</string>
    <string name="camera">Camera</string>
    <string name="camera_permission_denied">Camera permission must be enabled to use camera</string>
    <string name="camera_permission_granted">You can use camera now</string>
    <string name="change_language">Change Language</string>
    <string name="change_language_confirm">Go to language settings?</string>
    <string name="choose_an_image">Choose an image</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_story">Create Story</string>
    <string name="description">Description</string>
    <string name="email">Email</string>
    <string name="failed_to_fetch_data">Failed to fetch data</string>
    <string name="fine_location_permission_denied">Precise location permission must be granted to get your location</string>
    <string name="gallery">Gallery</string>
    <string name="image_and_desc_required">Please select an image and fill the description first</string>
    <string name="image_preview">Image Preview</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_inputs">Invalid inputs</string>
    <string name="invalid_password">Password length must be at least 8 characters</string>
    <string name="load_more_failed">Failed to load more data</string>
    <string name="location_disablec">Location not enabled. Try to check location settings</string>
    <string name="location_not_found">Location not found. Please refresh your location</string>
    <string name="location_permission_denied">Location permission must be granted to get your location</string>
    <string name="location_permission_granted">You can share your location now</string>
    <string name="login">Login</string>
    <string name="login_success">Login Success!</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Are you sure to logout?</string>
    <string name="logout_success">Logout Success!</string>
    <string name="maps">Maps</string>
    <string name="name">Name</string>
    <string name="no">No</string>
    <string name="no_data">No Data</string>
    <string name="no_location">No Location</string>
    <string name="not_logged_in">You are not logged in. Please login first</string>
    <string name="password">Password</string>
    <string name="post_creation_success">Post creation success!</string>
    <string name="post_photo">Post Photo</string>
    <string name="refresh">Refresh</string>
    <string name="register">Register</string>
    <string name="register_success">Register Success! You can login with new account</string>
    <string name="retry">Retry</string>
    <string name="share_your_location">Share your Location</string>
    <string name="show_markers_fail">Failed to show posts coordinate</string>
    <string name="story_list_fetch_failed">Failed to fetch story</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="update">Update</string>
    <string name="upload_post">Upload Post</string>
    <string name="yes">Yes</string>
</resources>